# Token-Factory

./: Anchor.toml  package.json  vercel.json
programs/token-factory/: Cargo.toml
programs/token-factory/keypairs/: token-factory-keypair.json
programs/token-factory/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/token-factory/src/instructions/: freeze_account.rs  harvest_fees.rs  initialize_token.rs  mint_additional.rs  mint_initial_supply.rs  mod.rs  revoke_authority.rs  update_metadata.rs
tests/: token-factory.ts
