[package]
name = "token-factory"
version = "0.1.0"
description = "Token Factory - Professional Solana Token Creator"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_factory"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token_2022", "associated_token"] }
spl-token-2022 = { version = "=8.0.1", features = ["no-entrypoint"] }
spl-token-metadata-interface = { version = "=0.7.0" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
